kubernetes/app/gitea/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-db
  namespace: gitea
  labels:
    app: gitea-db
spec:
  serviceName: gitea-db
  replicas: 1
  selector:
    matchLabels:
      app: gitea-db
  template:
    metadata:
      labels:
        app: gitea-db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          startupProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: 5432
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 5432
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-synology-ssd
        resources:
          requests:
            storage: 5Gi
