kubernetes/app/gitea/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-db
  namespace: gitea
spec:
  clusterIP: None
  selector:
    app: gitea-db
  ports:
    - port: 5432
      targetPort: 5432
